--- a/src/prototipogym/view/ManUsuario.form
+++ b/src/prototipogym/view/ManUsuario.form
@@ -411,6 +411,9 @@
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtPasswordActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="etiqueta">
           <Properties>
