--- a/src/prototipogym/view/ManLocalizacion.form
+++ b/src/prototipogym/view/ManLocalizacion.form
@@ -193,6 +193,9 @@
             <Property name="toolTipText" type="java.lang.String" value="Guardar"/>
             <Property name="borderPainted" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ButtonGuardarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="ButtonLimpiar">
           <Properties>
